k8s/haproxy-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
